--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,12 +6,23 @@
     "configurations": [
         {
             "type": "node",
+            "request": "attach",
+            "name": "Attach by Process ID",
+            "protocol": "inspector",
+            "processId": "${command:PickProcess}",
+            "remoteRoot": "/mnt/c/work/nitra-ts-client/",
+            "localRoot": "${workspaceRoot}"
+
+        },
+        {
+            "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch",
+            "protocol": "inspector",
+            //"remoteRoot": "/mnt/c/work/nitra-ts-client/",
+            //"localRoot": "${workspaceRoot}",
             "program": "${workspaceFolder}/hello.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "sourceMaps": true
         }
     ]
 }
